2010-09-07  Matthew Mundell <matthew.mundell@greenbone.net>

	Add associating of slave with task.

	* src/gsad.c (gsad_connection_info, free_resources, serve_post): Add
	slave_id attribute.
	(exec_omp_post): Pass slave_id to create_task_omp.

	* src/gsad_omp.c (create_task_omp): Add slave_id param.  Pass to
	CREATE_TASK.

	* src/gsad_omp.h: Update header accordingly.

	* src/html/omp.xsl (new_task): Add slave input.

2010-09-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (configure_credentials.html): Added
	note on Umlauts and Domain Controller.

2010-08-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report_format): Add trust time under trust.
	(report_format [details]): Extract text part of trust only.

2010-08-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Add verify buttons on the report formats page.

	* src/html/omp.xsl (report_format): Add verify button.

	* src/gsad_omp.c (verify_report_format_omp): New function.

	* src/gsad_omp.h: Add header accordingly.

	* src/gsad.c (init_validator, exec_omp_get): Add verify command.

2010-08-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/omp.xsl: Do not show the "Pause" button if the task is
	still being requested.

2010-08-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl: Consistent checked="1" everywhere.
	This is just code polishing.

	* src/html/gsad.xsl: Provide html tag with xml name space
	attribute. This was complained by HTML checker.

2010-08-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (init_validator): Allowed german umlauts for comment.

2010-08-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (configure_credentials.html): More info
	about allowed characters.

2010-08-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-lsc-credential-form): Check password
	instead of autogenerate.
