@@ -156,12 +156,14 @@ macro (Subversion_GET_REVISION dir variable)
 endmacro (Subversion_GET_REVISION)
 
 if (NOT CMAKE_BUILD_TYPE MATCHES "Release")
-  if (SVN_EXECUTABLE)
-    Subversion_GET_REVISION(. ProjectRevision)
-    set (SVN_REVISION ".SVN.r${ProjectRevision}")
-  else (SVN_EXECUTABLE)
-    set (SVN_REVISION ".SVN")
-  endif (SVN_EXECUTABLE)
+  if (EXISTS ".svn/")
+    if (SVN_EXECUTABLE)
+      Subversion_GET_REVISION(. ProjectRevision)
+      set (SVN_REVISION ".SVN.r${ProjectRevision}")
+    else (SVN_EXECUTABLE)
+      set (SVN_REVISION ".SVN")
+    endif (SVN_EXECUTABLE)
+  endif (EXISTS ".svn/")
 endif (NOT CMAKE_BUILD_TYPE MATCHES "Release")
 
 ## CPack configuration
